--- a/sitemap.html
+++ b/sitemap.html
@@ -37,38 +37,36 @@
 
     <!-- Primary Meta Tags -->
     <title>Sitemap | INC Shipping - sitemap</title>
-    <meta name="description" content="Welcome to INC Express Shipping LLC's official website. Agree to our Terms and
-        Conditions to access our freight forwarding, logistics, transport, and warehousing services. We prioritize
-        personalized service to ensure safe and timely delivery of your cargo." />
+    <meta name="description"
+        content="Welcome to the official website of INC Express Shipping LLC. For information about our warehousing, logistics, transportation, and freight forwarding services, see our sitemap. Our top priority is providing individualized service to guarantee the prompt and safe delivery of your shipment." />
     <meta name="keywords" content="" />
     <meta name="language" content="english" />
     <meta name="content-language" content="english" />
     <meta name="rating" content="General" />
     <meta name="robots" content="follow,index" />
-    <link rel="canonical" href="https://incshipping.com/terms-and-conditions" />
-    <meta name="DC.title" content="INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE" />
+    <link rel="canonical" href="https://incshipping.com/sitemap" />
+    <meta name="DC.title" content="Sitemap | INC Shipping - sitemap" />
     <meta name="geo.region" content="AE" />
     <meta name="geo.placename" content="Atmar" />
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE">
+    <meta property="og:title" content="Sitemap | INC Shipping - sitemap">
     <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/terms-and-conditions" />
+    <meta property="og:url" content="https://incshipping.com/sitemap" />
     <meta property="og:description"
-        content="Welcome to INC Express Shipping LLC's official site. We prioritize your privacy, outlining how we collect, use, and protect your data in our Privacy Policy.                
-Welcome to INC Express Shipping LLC's official website. Agree to our Terms and Conditions to access our freight forwarding, logistics, transport, and warehousing services. We prioritize personalized service to ensure safe and timely delivery of your cargo." />
+        content="Welcome to the official website of INC Express Shipping LLC. For information about our warehousing, logistics, transportation, and freight forwarding services, see our sitemap. Our top priority is providing individualized service to guarantee the prompt and safe delivery of your shipment." />
     <meta property="og:type" content=website>
     <meta property="og:image" content="">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/terms-and-conditions" />
+    <meta property="twitter:url" content="https://incshipping.com/sitemap" />
     <meta property="twitter:title"
-        content="INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE" />
+        content="Sitemap | INC Shipping - sitemap" />
     <meta property="twitter:description"
-        content="Welcome to INC Express Shipping LLC's official website. Agree to our Terms and Conditions to access our freight forwarding, logistics, transport, and warehousing services. We prioritize personalized service to ensure safe and timely delivery of your cargo." />
+        content="Welcome to the official website of INC Express Shipping LLC. For information about our warehousing, logistics, transportation, and freight forwarding services, see our sitemap. Our top priority is providing individualized service to guarantee the prompt and safe delivery of your shipment." />
     <meta property="twitter:image" content="" />
 
 
