--- a/cookies-policy.html
+++ b/cookies-policy.html
@@ -22,6 +22,49 @@
         href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Jomhuria&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
+
+
+
+        
+    <!-- Primary Meta Tags -->
+    <title>Cookies | INC Shipping - cookies policy</title>
+    <meta name="description"
+        content="Welcome to INC Express Shipping LLC's official website. Agree to our Cookies Policy to access our freight forwarding, logistics, transport, and warehousing services. We prioritize
+        personalized service to ensure safe and timely delivery of your cargo." />
+    <meta name="keywords" content="" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/cookies-policy" />
+    <meta name="DC.title" content="Cookies | INC Shipping - cookies policy" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Cookies | INC Shipping - cookies policy">
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/cookies-policy" />
+    <meta property="og:description"
+        content="Welcome to INC Express Shipping LLC's official website. Agree to our Cookies Policy to access our freight forwarding, logistics, transport, and warehousing services. We prioritize
+        personalized service to ensure safe and timely delivery of your cargo." />
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/cookies-policy" />
+    <meta property="twitter:title"
+        content="Cookies | INC Shipping - cookies policy" />
+    <meta property="twitter:description"
+        content="Welcome to INC Express Shipping LLC's official website. Agree to our Cookies Policy to access our freight forwarding, logistics, transport, and warehousing services. We prioritize
+        personalized service to ensure safe and timely delivery of your cargo." />
+    <meta property="twitter:image" content="" />
+
+
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16617021949">
     </script>
