--- a/thankyou.html
+++ b/thankyou.html
@@ -210,7 +210,7 @@
                 <a href="contact.html">Contact Us</a> <br><br>
                 <a href="tel:+971503524424"> &nbsp; &nbsp;<i class="fa-solid fa-phone"></i>+971 503524424</a> <br>
             </div>
-            <div class="about_hero-content">
+            <div class="about_hero-content" style="z-index: -99;">
                 <div class="about_hero_content_wrap">
                     <h1 style=" text-align: center; color: #000000;">THANK YOU!</h1>
                     <p style="text-align: center; color: #000000;">For Contacting INC Express Shipping LLC!</p>
